--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -5,8 +5,19 @@ includePaths.library = APPLICATION_PATH "/../library"
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 appnamespace = "Application"
+
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
+
+resources.db.adapter = PDO_MYSQL
+resources.db.params.host = localhost
+resources.db.params.username = root
+resources.db.params.password = hulk3005
+resources.db.params.dbname = webdb
+
+resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
+
+resources.view.doctype = "XHTML1_STRICT"
 
 [staging : production]
 
@@ -18,3 +29,4 @@ phpSettings.display_errors = 1
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
+phpSettings.date.timezone = "America/Sao_Paulo"
