--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -6,11 +6,12 @@ bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 appnamespace = "Application"
 storage.tempDir = "/imagens/"
-
+;resources.frontController.baseUrl = "/projetozendrob"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 
 resources.db.adapter = PDO_MYSQL
+resources.db.isDefaultTableAdapter = true
 resources.db.params.host = localhost
 resources.db.params.username = root
 resources.db.params.password = hulk3005
